--- a/basic/web/css/site.css
+++ b/basic/web/css/site.css
@@ -72,7 +72,21 @@ a.desc:after {
         padding: 10px 0;
     }
 }
-
+.confirm {
+    width:100%;
+    border:1px solid #ced4da;
+    padding:0.375rem 0.75rem;
+    border-radius:0.25rem;
+    color:#495057;
+    font-weight:400;
+    transition:border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    margin-bottom: 15px;
+}
+.confirm:focus {
+    border:4px solid rgb(174, 213, 255);
+    border-radius:0.4rem;
+    outline-style: inherit;
+}
 .nav > li > form > button.logout:focus,
 .nav > li > form > button.logout:hover {
     text-decoration: none;
